# chibi-plugins

./: README.md  bofh_in_the_shell  coffee-table  github-mcp  read_context  read_file  run_command
agent-skills/: .gitignore  Cargo.toml  agent-skills
agent-skills/skills/example-skill/: SKILL.md
agent-skills/skills/example-skill/scripts/: hello.py
agent-skills/src/: main.rs
bofh_in_the_shell/: bofh_in_the_shell
coffee-table/: coffee-table
fetch-mcp/: fetch-mcp
fetch_url/: fetch_url
file-permission/: file_permission.py
github-mcp/: github-mcp
hello_chibi/: Cargo.toml  README.md
hello_chibi/src/: main.rs
hook-inspector/: hook-inspector
read_context/: read_context
read_file/: read_file
recurse/: recurse
run_command/: run_command
sub-agent/: sub-agent
web_search/: web_search
