[package]
name = "agent-skills"
version = "0.1.0"
edition = "2021"
description = "Agent Skills plugin for chibi - compatibility layer for agentskills.io standard"

[[bin]]
name = "agent-skills"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
