[package]
name = "hello_chibi"
version = "0.1.0"
edition = "2021"
description = "XMPP bridge plugin for chibi - connects contexts to XMPP via mcabber"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
dirs = "5"
